trunk/Archive2/21/cae89623f474b3/output
+ g++-4.8 -std=c++11 -O2 -Wall -pedantic -pthread main.cpp
main.cpp:1:13: error: 'HRESULT' does not name a type
             HRESULT hr = S_OK;
             ^
main.cpp:3:13: error: 'UINT' does not name a type
             UINT createDeviceFlags = 0;
             ^
main.cpp:7:13: error: 'array' in namespace 'std' does not name a type
             std::array<D3D_FEATURE_LEVEL, 1> featureLevels = { D3D_FEATURE_LEVEL_11_0 };
             ^
main.cpp:7:88: warning: extra ';' [-Wpedantic]
             std::array<D3D_FEATURE_LEVEL, 1> featureLevels = { D3D_FEATURE_LEVEL_11_0 };
                                                                                        ^
main.cpp:9:13: error: 'CComPtr' does not name a type
             CComPtr<ID3D11Device> device;
             ^
main.cpp:10:13: error: 'D3D_FEATURE_LEVEL' does not name a type
             D3D_FEATURE_LEVEL featureLevel;
             ^
main.cpp:11:13: error: 'CComPtr' does not name a type
             CComPtr<ID3D11DeviceContext> immediateContext;
             ^
main.cpp:13:13: error: 'hr' does not name a type
             hr = D3D11CreateDevice(nullptr /* default adapter */,
             ^
main.cpp:23:19: error: expected constructor, destructor, or type conversion before '(' token
             assert(SUCCEEDED(hr));
                   ^
main.cpp:25:13: error: 'Concurrency' does not name a type
             Concurrency::accelerator_view dxView = Concurrency::direct3d::create_accelerator_view(device);
             ^
main.cpp:27:13: error: 'UINT' does not name a type
             UINT bufferSize = NumPixels;
             ^
main.cpp:28:13: error: 'D3D11_BUFFER_DESC' does not name a type
             D3D11_BUFFER_DESC bufferDesc =
             ^
main.cpp:36:14: warning: extra ';' [-Wpedantic]
             };
              ^
main.cpp:37:13: error: 'D3D11_SUBRESOURCE_DATA' does not name a type
             D3D11_SUBRESOURCE_DATA resourceData;
             ^
main.cpp:38:23: error: expected constructor, destructor, or type conversion before '(' token
             ZeroMemory(&resourceData, sizeof(D3D11_SUBRESOURCE_DATA));
                       ^
main.cpp:40:13: error: 'vector' in namespace 'std' does not name a type
             std::vector<Color> pixels(bufferSize);
             ^
main.cpp:42:13: error: 'resourceData' does not name a type
             resourceData.pSysMem = &pixels[0];
             ^
main.cpp:43:13: error: 'CComPtr' does not name a type
             CComPtr<ID3D11Buffer> buffer;
             ^
main.cpp:44:13: error: 'hr' does not name a type
             hr = device->CreateBuffer(&bufferDesc, &resourceData, &buffer);
             ^
main.cpp:45:19: error: expected constructor, destructor, or type conversion before '(' token
             assert(SUCCEEDED(hr));
                   ^
